adde html stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="grid-items">
+        <div class="grid-items header">Header</div>
+        <div class="grid-items aside">Aside</div>
+        <div class="grid-items nav">Nav</div>
+        <div class="grid-items main">Main</div>
+        <div class="grid-items footer">Footer</div>
+    </div>
+
+
 </body>
 </html>
