--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="grid-items">
+    <div class="grid-container">
         <div class="grid-items header">Header</div>
         <div class="grid-items aside">Aside</div>
         <div class="grid-items nav">Nav</div>
