sorted desktop grid

--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header> 
@@ -23,7 +24,7 @@
             <img class="grid-item img4" src="images/img-4.jpg" alt="house">
             <img class="grid-item img5" src="images/img-5.jpg" alt="house">
             <img class="grid-item img6" src="images/img-6.jpg" alt="house">
-            <img class="grid-item img6" src="images/img-6.jpg" alt="house">
+            <img class="grid-item img7" src="images/img-7.jpg" alt="house">
         </div>
 
 
