--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -11,6 +11,7 @@
     <header> 
         <div class="header-grid">
             <div class="header-item logo">MyGallery</div>
+            <div class="header-item gap"></div>
             <div class="header-item work">Work</div>
             <div class="header-item about">About</div>
             <div class="header-item contact">Contact</div>
